--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reference Radar</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/popup.ts"></script>
+    <script type="module" src="/popup.ts"></script>
   </body>
 </html>
